Tue Oct 14 18:24:53 EEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* Save old channel keys in list to allow more rapid change
	  of channel keys if server for some reason does that.  This
	  avoids loosing so many channel messages due to not having
	  key to decrypt.  Affected file lib/silcclient/silcclient.h,
	  idlist.c and client_channel.c.

Mon Oct 13 21:37:47 EEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* Continued backup router tests and fixes.  Affected files
	  silcd/server_backup, server_util.c, server.c.  See TODO.

Sun Oct 12 19:58:18 EEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* Fixed SERVER_SIGNOFF handling in servers.  The client
	  was removed from wrong list thus not removing the client
	  at all.  Affected file silcd/packet_receive.c.

	* Do not execute rekey protocol for disabled connections as
	  it would never go through.  Affected file silcd/server.c.

	* Added timeout for rekey protocol to catch if the protocol
	  never executes successfully.  Affected files silcd/server.c
	  and protocol.h.

Sat Oct 11 15:39:22 EEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* Abandon packet processing for disconnected sockets.  Check
	  this always after calling packet processing callback.
	  Affected file lib/silccore/silcpacket.c.

	* Fixed double registration disconnection code in server.
	  Closed wrong connection.  Affected file silcd/packet_receive.c.

Fri Oct 10 16:27:12 EEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* On normal server reconnect to primary during resuming 4
	  times, then give up.  Affected file silcd/server_backup.c.

	* If during reconnecting to routers we notice we have router
	  connection but no primary router set, the server is in desync.
	  Reconnect to primary to restore network.  Affected file
	  silcd/server.c.

	* Assure that only one protocol is exeucting at the same time.
	  Added checks for all protocols.  Affected files are
	  silcd/server.c and server_backup.c.
